# CHAT-WITH-DATA

./: README.md  app.py  pyproject.toml
agent/: main.py
util/: file_processor.py
