[project]
name = "data-analysis-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.3.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-mistralai>=0.2.11",
    "langgraph>=0.6.4",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "streamlit>=1.48.0",
    "typing>=3.10.0.0",
]
